--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=shuttle.proxy.rlwy.net
+DB_PORT=59766
 DB_USER=root
-DB_PASS=Rishi_5943!
-DB_NAME=learning_app
-JWT_SECRET=your_jwt_secret
+DB_PASS=CXOlWtxMWEgJccWJfHmuYXEyenuVjoRI
+DB_NAME=railway
