--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-DB_HOST=shuttle.proxy.rlwy.net
-DB_PORT=59766
-DB_USER=root
-DB_PASS=CXOlWtxMWEgJccWJfHmuYXEyenuVjoRI
-DB_NAME=railway
+DB_HOST=sql12.freesqldatabase.com
+DB_PORT=3306
+DB_USER=sql12791756
+DB_PASS=hX6QTaDVSQ
+DB_NAME=sql12791756
 JWT_SECRET=my-super-secret
 
