--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://personalized-learningapp-production.up.railway.app 
+REACT_APP_API_URL=https://personalized-learningapp.onrender.com
